--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,17 @@
         <artifactId>testng</artifactId>
         <version>6.14.3</version>
     </dependency>
-
-
+    <dependency>
+        <groupId>net.sourceforge.htmlunit</groupId>
+        <artifactId>webdriver</artifactId>
+        <version>2.6</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.codeborne</groupId>
+        <artifactId>phantomjsdriver</artifactId>
+        <version>1.4.1</version>
+    </dependency>
 </dependencies>
 
 
